[project]
dynamic = ["dependencies"]
name = "task_offloading_moo"
version = "0.0.1"
authors = [
  {name = "Maxime Cabrit"},
  {name = "Antoine Charlet"},
  {name = "Robin Meneust"},
  {name = "Ethan Pinto"},
]
description = "Task offloading multi-objective optimization"
readme = "README.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | venv
  | build
  | dist
  | conf
)/
'''

[tool.poetry]

packages = [{ include = "tasks_offloading_moo" }]

include = [
    "tasks_offloading_moo/data/config/*.json"
]